--- a/Home.html
+++ b/Home.html
@@ -20,20 +20,21 @@
 		<!-- Head -->
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-               <a class="navbar-brand" href="Home.html"><img src="sekolah.jpg" width="75px" height="50px"></a>
-               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
-               </button>
-               <div class="collapse navbar-collapse" id="navbar">
-                   <ul class="nav navbar-nav me-auto mb-2 mb-lg-0">
-                       <li class="nav-item"><a class="nav-link active" aria-current="page" href="Home.html">Home</a></li>
-                       <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-                       <li class="nav-item"><a class="nav-link" href="jurusan.html">Jurusan</a></li>
-                       <li class="nav-item"><a class="nav-link" href="ekskul.html">Ekskul</a></li>
-                       <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
-                   </ul>
-               </div>
-           </div>
+                <a class="navbar-brand" href="Home.html"><img src="sekolah.png" width="75px" height="50px"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbar">
+                    <ul class="nav navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="Home.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="sejarah.html">Sejarah</a></li>
+                    <li class="nav-item"><a class="nav-link" href="jurusan.html">Jurusan</a></li>
+                    <li class="nav-item"><a class="nav-link" href="ekskul.html">Ekskul</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pendaftaran.html">pendaftaran</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+                </ul>
+            </div>
+            </div>
         </nav>   
         <!-- Body -->
         <!-- Slideshow-->
@@ -45,13 +46,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="sekolah.jpg" class="d-block w-100" alt="...">
+                    <img src="s.jpeg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="seminar.jpg" class="d-block w-100" alt="...">
+                    <img src="g.jpeg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="retret.jpg" class="d-block w-100" alt="...">
+                    <img src="tp1.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#slide"  data-bs-slide="prev">
@@ -68,10 +69,10 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col">
-                        <h2 align="center">What is Yeagerist Highschool ?</h2>
-                        <p style="text-align: justify;">Yeagerist Highschool is a school that teach people to learn what is &quot;humanity&quot;, &quot;responsibilty&quot; and &quot;consequences&quot;. We believe that our world doesn't need <i>smart people but caring people</i> who will lend someone in need a hand. Right now, <b>many people help other to become viral or to become famous not because they really care</b>, that's why our school will provide lesson more focus on human behaviour. We learn that our world education system teach about competition not teamwork, all student compete against each other to get A sometimes they even sacrifice their humanity or talent to achieve that. That system is the reason why many student hate school because it's always about competition, or sacrifice.</p>
+                        <h2 align="center">apa itu sekolah menengah kejuruan ?</h2>
+                        <p style="text-align: justify;">Dalam Pasal 15 Undang-Undang Nomor 20 Tahun 2003 tentang Sistem Pendidikan Nasional mengatur bahwa pendidikan kejuruan merupakan pendidikan menengah yang mempersiapkan peserta didik terutama untuk bekerja dalam bidang tertentu.</p>
                     </div>
-                    <div class="col"><img src="Kepala Sekolah.JPG" class="img-fluid">
+                    <div class="col"><img src="sekolah.png" class="img-fluid" width="100%"> 
                     </div>
                 </div>
             </div>
@@ -82,9 +83,9 @@
                 <h1>Highlight</h1>
                 <div class="row">
                     <div class="col">
-                        <img src="live in.jpg" class="pro-img">
-                        <h4>Live In</h4>
-                        <p>Merasakan kehidupan desa selama satu minggu.</p>
+                        <img src="d.jpeg" class="pro-img">
+                        <h4>safety reading</h4>
+                        <p>keselamatan berkendara merupakan suatu usaha yang bertujuan untuk meminimalisir tingkat bahaya sehingga memaksimalkan keselamatan dalam berkendara.</p>
                     </div>
                     <div class="col">
                         <img src="retret.jpg" class="pro-img">
@@ -103,5 +104,13 @@
         <section id="footer">
             
         </section>
+        <footer class="ml-auto">
+            <div
+            class="text-white text-center p-3"
+            style="height: 50px; background-color: black"
+            >
+            Created By FIRDAN-23 | 2024 All Rigth Reserved
+            </div>
+        </footer>
     </body>
 </html>
