--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <!-- Head -->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="Home.html"><img src="logo.png" width="75px" height="50px"></a>
+            <a class="navbar-brand" href="Home.html"><img src="sekolah.png" width="75px" height="50px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
                 aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,9 +28,10 @@
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="Home.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="program.html">Program</a></li>
-                    <li class="nav-item"><a class="nav-link" href="registration.html">Registration</a></li>
+                    <li class="nav-item"><a class="nav-link" href="sejarah.html">Sejarah</a></li>
+                    <li class="nav-item"><a class="nav-link" href="jurusan.html">Jurusan</a></li>
+                    <li class="nav-item"><a class="nav-link" href="ekskul.html">Ekskul</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pendaftaran.html">pendaftaran</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
@@ -40,8 +41,8 @@
     <!-- Contact Us -->
     <section class="contact">
         <div class="content">
-            <h2>Contact Us</h2>
-            <P>If you have more questions please contact us</p>
+            <h2>Hubungi Kami</h2>
+            <P>Jika Anda memiliki pertanyaan lebih lanjut, silakan hubungi kami</p>
         </div>
         <div class="container">
             <div class="contactInfo">
@@ -49,9 +50,8 @@
                     <div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i>
                     </div>
                     <div class="text">
-                        <h3>Address</h3>
-                        <p>The Trost District (トロスト区 Torosuto-ku?) is a town located on the south edge of Wall
-                            Rose,15151</p>
+                        <h3>Alamat</h3>
+                        <p>Jl. Depok, Sukamenak, Kec. Purbaratu, Kab. Tasikmalaya, Jawa Barat,46196</p>
                     </div>
                 </div>
                 <div class="box">
@@ -66,7 +66,7 @@
                     </div>
                     <div class="text">
                         <h3>Email</h3>
-                        <p>yeageristhighschool@gmail.com</p>
+                        <p>smkn4-tsm.sch@gmail.com</p>
                     </div>
                 </div>
             </div>
@@ -94,11 +94,19 @@
     </section>
     <script>
         $(document).ready(function(){
-          $("form").submit(function(){
+        $("form").submit(function(){
             alert("Submitted");
-          });
         });
-      </script>
+        });
+        </script>
+    <footer class="ml-auto">
+        <div
+        class="text-white text-center p-3"
+        style="height: 50px; background-color: black"
+        >
+        Created By FIRDAN-23 | 2024 All Rigth Reserved
+        </div>
+    </footer>
 </body>
 
 </html>
