--- a/jurusan.html
+++ b/jurusan.html
@@ -15,16 +15,17 @@
 		<!-- Head -->
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-               <a class="navbar-brand" href="Home.html"><img src="logo.png" width="75px" height="50px"></a>
+               <a class="navbar-brand" href="Home.html"><img src="sekolah.png" width="75px" height="50px"></a>
                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
                </button>
                <div class="collapse navbar-collapse" id="navbar">
                    <ul class="nav navbar-nav me-auto mb-2 mb-lg-0">
                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="Home.html">Home</a></li>
-                       <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+                       <li class="nav-item"><a class="nav-link" href="sejarah.html">Sejarah</a></li>
                        <li class="nav-item"><a class="nav-link" href="jurusan.html">Jurusan</a></li>
                        <li class="nav-item"><a class="nav-link" href="ekskul.html">Ekskul</a></li>
+                       <li class="nav-item"><a class="nav-link" href="pendaftaran.html">pendaftaran</a></li>
                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
                    </ul>
                </div>
@@ -36,60 +37,59 @@
           <h2 align="center"><b>Programs</b></h2>
           <div class="row">
             <div class="col">
-              <img src="seminar.jpg" class="pro-item">
+              <img src="p.png" class="pro-item">
             </div>
             <div class="col">
-              <h4><b>Seminar</b></h4>
-              <p>Yeagerist highschool will invite some people from many job, like police, bartender, CEO, painter, etc. to give our student many perspective of life. We hope with our seminar can make our student find their interest and boost their motivation to improve their talent.</p>
+              <h4><b>Pengembangan Perangkat Lunak Dan Gim</b></h4>
+              <p> jurusan yang mempelajari tentang perkembangan perangkat lunak meliputi pembuatan, manajemen organisasi pengembangan perangkat lunak, pemeliharaan dan manajemen kualitas..</p>
             </div>
           </div>
           <div class="row">
             <div class="col">
-              <img src="retret.jpg" class="pro-item">
+              <img src="Motor-removebg-preview.png" class="pro-item">
             </div>
             <div class="col">
-              <h4><b>Retret</b></h4>
-              <p>Student in 3rd year will stay overnight for 3 day 2 night in our chosen place. in 3 days and 2 night the student will provide with spiritual lesson to strenghten their mental. with retret we hope student can grow stronger to face their own problem.</p>
+              <h4><b>Teknik Sepeda Motor</b></h4>
+              <p>salah satu cabang ilmu teknik mesin yang mempelajari tentang bagaimana merancang, membuat dan mengembangkan alat-alat transportasi darat yang menggunakan mesin, terutama sepeda motor..</p>
             </div>
           </div>
           <div class="row">
             <div class="col">
-              <img src="outbound.jpg" class="pro-item">
+              <img src="tkjt.png" class="pro-item">
             </div>
             <div class="col">
-              <h4><b>Outbound</b></h4>
-              <p>This program will have the first year student to stay 2 day 1 night for leadership training. this program will help student to polish their leadership skill, not only that this program also improve their teamwork ability.</p>
+              <h4><b>Teknik computer Dan Jaringan</b></h4>
+              <p>teori perangkat keras komputer, tetapi juga belajar cara membangun jaringan LAN, WAN, WiFi, atau instalasi jaringan lainnya.</p>
             </div>
           </div>
           <div class="row">
             <div class="col">
-              <img src="camp.jpg" class="pro-item">
+              <img src="dkv.png" class="pro-item">
             </div>
             <div class="col">
-              <h4><b>Camping</b></h4>
-              <p>This program will have the student to stay 2 day 1 night to camp in nature. this program will grow our student care for nature so we can keep our nature in check. we hope with this program the student can care for the nature.</p>
+              <h4><b>Desain Komunikasi Visual</b></h4>
+              <p>DKV akan mempelajari berbagai keterampilan dalam merancang elemen visual seperti logo, poster, buku, website, dan materi promosi lainnya. Mahasiswa juga akan mempelajari konsep desain, teknik desain, serta prinsip komunikasi visual..</p>
             </div>
           </div>
           <div class="row">
             <div class="col">
-              <img src="live in.jpg" class="pro-item">
+              <img src="Factory-removebg-preview.png" class="pro-item">
             </div>
             <div class="col">
-              <h4><b>Live In</b></h4>
-              <p>Student in 2nd year will have to stay in small village for a week. this program will improve their humanity to help people with low economic. we hope that this program can grow humanity out from every and each student.</p>
+              <h4><b>Teknik Otomasi Industri</b></h4>
+              <p>Teknik Otomasi Industri adalah sebuah bidang teknik yang mempelajari tentang perakitan sistem-sistem di dunia industri yang berbasis otomatis.</p>
             </div>
           </div>
-          <div class="row">
-            <div class="col">
-              <img src="study.jpg" class="pro-item">
-            </div>
-            <div class="col">
-              <h4><b>Study Tour</b></h4>
-              <p>Each year the student will travel to historic place or company to improve their knowledge. like many said knowledge is power.</p>
-            </div>
           </div>
         </div>
       </section> 
-        
+      <footer class="ml-auto">
+        <div
+          class="text-white text-center p-3"
+          style="height: 50px; background-color: black"
+        >
+          Created By FIRDAN-23 | 2024 All Rigth Reserved
+        </div>
+      </footer>
 	</body>
 </html>
