--- a/ekskul.html
+++ b/ekskul.html
@@ -50,7 +50,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Ekstrakurikuler 1</h5>
                     <p class="card-text">Deskripsi kegiatan ekstrakurikuler 1.</p>
-                    <a href="#" class="btn btn-primary">Lihat Selengkapnya</a>
+                    <a href="https://id.wikipedia.org/wiki/Paskibraka" class="btn btn-primary">Lihat Selengkapnya</a>
                 </div>
             </div>
         </div of ano>
@@ -61,7 +61,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Ekstrakurikuler 2</h5>
                     <p class="card-text">Deskripsi kegiatan ekstrakurikuler 2.</p>
-                    <a href="#" class="btn btn-primary">Lihat Selengkapnya</a>
+                    <a href="https://id.wikipedia.org/wiki/Patroli_Keamanan_Sekolah" class="btn btn-primary">Lihat Selengkapnya</a>
                 </div>
             </div>
         </div>
@@ -72,7 +72,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Ekstrakurikuler 3</h5>
                     <p class="card-text">Deskripsi kegiatan ekstrakurikuler 3.</p>
-                    <a href="#" class="btn btn-primary">Lihat Selengkapnya</a>
+                    <a href="https://id.wikipedia.org/wiki/Palang_Merah_Remaja" class="btn btn-primary">Lihat Selengkapnya</a>
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Ekstrakurikuler 4</h5>
                     <p class="card-text">Deskripsi kegiatan ekstrakurikuler 4.</p>
-                    <a href="#" class="btn btn-primary">Lihat Selengkapnya</a>
+                    <a href="https://id.wikipedia.org/wiki/Pendidikan_lingkungan_hidup" class="btn btn-primary">Lihat Selengkapnya</a>
                 </div>
             </div>
         </div>
@@ -96,7 +96,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Ekstrakurikuler 5</h5>
                     <p class="card-text">Deskripsi kegiatan ekstrakurikuler 5.</p>
-                    <a href="#" class="btn btn-primary">Lihat Selengkapnya</a>
+                    <a href="https://id.wikipedia.org/wiki/Futsal" class="btn btn-primary">Lihat Selengkapnya</a>
                 </div>
             </div>
         </div>
@@ -106,7 +106,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Ekstrakurikuler 6</h5>
                     <p class="card-text">Deskripsi kegiatan ekstrakurikuler 6.</p>
-                    <a href="#" class="btn btn-primary">Lihat Selengkapnya</a>
+                    <a href="https://id.wikipedia.org/wiki/Bola_voli" class="btn btn-primary">Lihat Selengkapnya</a>
                 </div>
             </div>
         </div>
@@ -166,7 +166,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Ekstrakurikuler 11</h5>
                             <p class="card-text">Deskripsi kegiatan ekstrakurikuler 11.</p>
-                            <a href="#" class="btn btn-primary">Lihat Selengkapnya</a>
+                            <a href="https://id.wikipedia.org/wiki/Paskibraka" class="btn btn-primary">Lihat Selengkapnya</a>
                         </div>
                     </div>
                 </div>
@@ -176,7 +176,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Ekstrakurikuler 12</h5>
                             <p class="card-text">Deskripsi kegiatan ekstrakurikuler 12.</p>
-                            <a href="#" class="btn btn-primary">Lihat Selengkapnya</a>
+                            <a href="https://id.wikipedia.org/wiki/Keluarga_Silat_Nasional_Indonesia_Perisai_Diri" class="btn btn-primary">Lihat Selengkapnya</a>
                         </div>
                     </div>
                 </div>
@@ -190,7 +190,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Ekstrakurikuler 13</h5>
                                     <p class="card-text">Deskripsi kegiatan ekstrakurikuler 13.</p>
-                                    <a href="#" class="btn btn-primary">Lihat Selengkapnya</a>
+                                    <a href="https://id.wikipedia.org/wiki/Bola_basket" class="btn btn-primary">Lihat Selengkapnya</a>
                                 </div>
                             </div>
                         </div of ano>
@@ -201,7 +201,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Ekstrakurikuler 14</h5>
                                     <p class="card-text">Deskripsi kegiatan ekstrakurikuler 14.</p>
-                                    <a href="#" class="btn btn-primary">Lihat Selengkapnya</a>
+                                    <a href="https://id.wikipedia.org/wiki/Perpustakaan" class="btn btn-primary">Lihat Selengkapnya</a>
                                 </div>
                             </div>
                         </div>
@@ -212,13 +212,12 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Ekstrakurikuler 15</h5>
                                     <p class="card-text">Deskripsi kegiatan ekstrakurikuler 15.</p>
-                                    <a href="#" class="btn btn-primary">Lihat Selengkapnya</a>
+                                    <a href="https://id.wikipedia.org/wiki/Organisasi_Siswa_Intra_Sekolah" class="btn btn-primary">Lihat Selengkapnya</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-    
                 <footer class="ml-auto">
                   <div
                     class="text-white text-center p-3"
